tests/build/fail/widget_new/no_default_when_assigned1.stderr
error: property `margin` is not assigned and has no default value
 --> $DIR/no_default_when_assigned1.rs:7:13
  |
7 |             margin = 20
  |             ^^^^^^
